Issue #2944721: Added hidden-anonymous and visible-admin LESS/CSS classes as they have been moved to Vartheme base for features to use

--- a/themes/vartheme/VARTHEME_SUBTHEME/less/base/vartheme.base.less
+++ b/themes/vartheme/VARTHEME_SUBTHEME/less/base/vartheme.base.less
@@ -827,3 +827,20 @@ img {
     text-align: center;
   }
 }
+
+// Hide for anonymous users.
+.hidden-anonymous {
+  display: none !important;
+}
+
+// Show only for admin users.
+body.user-logged-in {
+
+  .visible-admin {
+    display: inline-block !important;
+  }
+
+  .btn.visible-admin {
+    display: inline-block !important;
+  }
+}
